Actualizar graficos y otros

--- a/notebooks_final/carga_BBDD_final.ipynb
+++ b/notebooks_final/carga_BBDD_final.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,59 +12,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import psycopg2 \n",
     "from psycopg2 import sql\n",
+    "\n",
+    "import sqlalchemy \n",
     "from sqlalchemy import create_engine, text\n",
-    "import sqlalchemy \n"
+    "from sqlalchemy.orm import sessionmaker\n",
+    "from sqlalchemy import select\n",
+    "from sqlalchemy.sql import table, column\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "engine = create_engine(\"postgresql+psycopg2://postgres:admin@localhost:5432/Proyecto_ETL\")\n",
-    "conn_alchemy = engine.connect()"
+    "engine = create_engine(\"postgresql+psycopg2://postgres:admin@localhost:5432/Proyecto_ETL\") # Conexión a la BBDD\n",
+    "\n",
+    "Session = sessionmaker(bind=engine) # crea una sesión para interactuar con la BBDD y la vincula al motor de la misma (engine) para saber a qué BBDD conectarse.\n",
+    "session = Session() # Inicia una sesión para hacer CRUD"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def carga_bbdd(dataframe, tabla, id):\n",
-    "    \n",
-    "    resultado_query = \"Todos los valores ya existían en la BBDD\"\n",
+    "def insertar_registros(dataframe, tabla, id, columnas):\n",
     "\n",
     "    try:\n",
-    "        df_valores_existentes = pd.read_sql(f\"SELECT {id} FROM {tabla}\", con=engine)\n",
+    "\n",
+    "        tabla_alchemy = table(tabla, column(id)) # Crea un objeto table y le pasamos las columnas a las que queremos acceder después \n",
+    "        query_alchemy_existentes = select(tabla_alchemy.c[id]) # Creamos la consulta SELECT accediendo a la columna id que hemos definido antes\n",
+    "        df_valores_existentes = pd.read_sql(query_alchemy_existentes, con=engine)   # Ejecutamos la consulta\n",
+    "\n",
+    "        # query_existentes = text(f\"SELECT :{id} FROM :{tabla}\") \n",
+    "        # df_valores_existentes = pd.read_sql(query_existentes, con=engine) \n",
+    "            \n",
     "    except Exception as e:\n",
-    "        resultado_query = f\"No se ha podido acceder a los registros de la BBDD:\\n {e}\"\n",
-    "        return resultado_query\n",
+    "        print(f\"No se ha podido acceder a los registros de la BBDD:\\n {e}\")\n",
     "\n",
     "    df_valores_nuevos = dataframe[dataframe[id].isin(df_valores_existentes[id]) == False]\n",
+    "    # Los valores nuevos será el resultado de los valores del dataframe que le pasamos que no esten en df_valores_existentes\n",
     "\n",
-    "    if not df_valores_nuevos.empty:\n",
-    "        df_valores_nuevos.to_sql(tabla, con=engine, if_exists=\"append\", index=False)\n",
-    "        resultado_query = f\"{df_valores_nuevos.shape[0]} valores nuevos insertados en la tabla {tabla}\"\n",
-    "    \n",
-    "    return resultado_query"
+    "    if df_valores_nuevos.empty:\n",
+    "        print(\"Todos los valores ya existían en la BBDD\")\n",
+    "\n",
+    "    else:\n",
+    "\n",
+    "        if len(columnas) == 1:\n",
+    "            cols = columnas[0]\n",
+    "            values = \":\"+ columnas[0]\n",
+    "        else:\n",
+    "            cols = \", \".join(columnas)\n",
+    "            values = \", :\".join(columnas)\n",
+    "            values = \":\" + values\n",
+    "        \n",
+    "        try:\n",
+    "            data_to_insert = dataframe[columnas].drop_duplicates(subset=[id]).to_dict(orient=\"records\") \n",
+    "            # Usamos orient=record para crear una lista de diccionarios donde cada elemento de la lista es registro completo con los valores de las 4 columnas de la tabla (Hay tantos elementos como registros a insertar: 29)\n",
+    "            # En vez de agrupar todos los valores en cada categoría en un diccionario de diccionarios donde cada diccionario interno contiene los valores de cada columna por seprarado (Hay tantos diccionarios como columnas en la BBDD: 4)\n",
+    "            # Es decir, agrupamos por registros en vez de por columnas\n",
+    "\n",
+    "            insert_query = text(f\"\"\"\n",
+    "                INSERT INTO {tabla} ({cols})\n",
+    "                VALUES ({values})\n",
+    "            \"\"\")\n",
+    "\n",
+    "            session.execute(insert_query, data_to_insert)\n",
+    "            session.commit()\n",
+    "\n",
+    "            resultado_query = f\"{df_valores_nuevos.shape[0]} valores nuevos insertados en la tabla {tabla}\"\n",
+    "\n",
+    "        except Exception as e:\n",
+    "            \n",
+    "            session.rollback()\n",
+    "            resultado_query = f\"Error al insertar hoteles: {e}\"\n",
+    "\n",
+    "    return resultado_query\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def reset_bbdd(engine):\n",
+    "def reset_bbdd():\n",
     "    lista_queries = [\n",
     "        \"DELETE FROM eventos;\",\n",
     "        \"DELETE FROM ciudad;\",\n",
@@ -78,23 +119,34 @@
     "\n",
     "    try:\n",
     "        for query in lista_queries:\n",
-    "            conn_alchemy.execute(text(query))\n",
+    "            session.execute(text(query))\n",
     "\n",
-    "        conn_alchemy.commit()\n",
+    "        session.commit()\n",
     "        print(\"Base de datos reseteada correctamente.\")\n",
     "\n",
     "    except Exception as e:\n",
-    "\n",
-    "        print(f\"Error al resetear la base de datos:\\n {e}\")\n"
+    "        session.rollback()\n",
+    "        print(f\"Error al resetear la base de datos:\\n {e}\")\n",
+    "    \n",
+    "    finally:\n",
+    "        session.close()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Base de datos reseteada correctamente.\n"
+     ]
+    }
+   ],
    "source": [
-    "# reset_bbdd(engine)"
+    "reset_bbdd()"
    ]
   },
   {
@@ -106,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,25 +175,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1"
+       "'1 valores nuevos insertados en la tabla ciudad'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "lista_ciudad = [\"Madrid\"]\n",
-    "df_ciudad = pd.DataFrame(lista_ciudad, columns = [\"nombre_ciudad\"])\n",
+    "df_ciudad = pd.DataFrame([\"Madrid\"], columns = [\"nombre_ciudad\"])\n",
     "\n",
-    "df_ciudad.to_sql(\"ciudad\", con=engine, if_exists=\"append\", index=False)"
+    "insertar_registros(df_ciudad, \"ciudad\", \"nombre_ciudad\", [\"nombre_ciudad\"])"
    ]
   },
   {
@@ -153,22 +204,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "211 valores nuevos insertados en la tabla eventos\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'211 valores nuevos insertados en la tabla eventos'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_tabla_eventos = df_eventos[[\"nombre_evento\", \"url_evento\", \"codigo_postal\", \"direccion\", \"horario\", \"fecha_inicio\", \"fecha_fin\", \"organizacion\", \"id_ciudad\" ]]\n",
+    "cols_eventos = [\"nombre_evento\", \"url_evento\", \"codigo_postal\", \"direccion\", \"horario\", \"fecha_inicio\", \"fecha_fin\", \"organizacion\", \"id_ciudad\" ]\n",
+    "df_tabla_eventos = df_eventos[cols_eventos]\n",
     "\n",
-    "resultado_carga_tabla_eventos = carga_bbdd(df_tabla_eventos, \"eventos\", \"nombre_evento\") \n",
-    "print(resultado_carga_tabla_eventos)"
+    "insertar_registros(df_tabla_eventos, \"eventos\", \"nombre_evento\",cols_eventos )"
    ]
   },
   {
@@ -180,23 +234,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "29 valores nuevos insertados en la tabla hoteles\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'29 valores nuevos insertados en la tabla hoteles'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_tabla_hoteles = (df_hoteles[[\"nombre_hotel\", \"competencia\", \"valoracion\", \"id_ciudad\"]].drop_duplicates(subset=[\"nombre_hotel\"]))\n",
+    "cols_hoteles = [\"nombre_hotel\", \"competencia\", \"valoracion\", \"id_ciudad\"]\n",
+    "df_tabla_hoteles = (df_hoteles[cols_hoteles].drop_duplicates(subset=[\"nombre_hotel\"]))\n",
     "\n",
-    "\n",
-    "resultado_carga_tabla_hoteles = carga_bbdd(df_tabla_hoteles, \"hoteles\", \"nombre_hotel\") # Verifico por nombre porque id_hotel es serial en la BBDD\n",
-    "print(resultado_carga_tabla_hoteles)"
+    "insertar_registros(df_tabla_hoteles, \"hoteles\", \"nombre_hotel\", cols_hoteles)"
    ]
   },
   {
@@ -212,17 +268,21 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "14905 valores nuevos insertados en la tabla clientes\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'14905 valores nuevos insertados en la tabla clientes'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_tabla_clientes = df_hoteles[[\"id_cliente\", \"nombre\", \"apellido\", \"mail\"]].drop_duplicates(subset=\"id_cliente\")\n",
-    "resultado_carga_tabla_clientes = carga_bbdd(df_tabla_clientes, \"clientes\", \"id_cliente\") \n",
-    "print(resultado_carga_tabla_clientes)"
+    "cols_clientes = [\"id_cliente\", \"nombre\", \"apellido\", \"mail\"]\n",
+    "df_tabla_clientes = df_hoteles[cols_clientes].drop_duplicates(subset=\"id_cliente\")\n",
+    "\n",
+    "insertar_registros(df_tabla_clientes, \"clientes\", \"id_cliente\", cols_clientes)"
    ]
   },
   {
@@ -234,31 +294,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "15000 valores nuevos insertados en la tabla reservas\n"
+      "C:\\Users\\victo\\AppData\\Local\\Temp\\ipykernel_2536\\366990473.py:4: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_tabla_reservas['nombre_hotel'] = df_tabla_reservas.groupby('id_hotel').ngroup() + 1\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'15000 valores nuevos insertados en la tabla reservas'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_tabla_reservas = df_hoteles[[\"id_reserva\", \"fecha_reserva\", \"inicio_estancia\", \"final_estancia\", \"precio_noche\",\"id_cliente\", \"id_hotel\"]]\n",
+    "cols_reservas = [\"id_reserva\", \"fecha_reserva\", \"inicio_estancia\", \"final_estancia\", \"precio_noche\",\"id_cliente\", \"id_hotel\"]\n",
+    "df_tabla_reservas = df_hoteles[cols_reservas]\n",
+    "\n",
     "df_tabla_reservas['nombre_hotel'] = df_tabla_reservas.groupby('id_hotel').ngroup() + 1\n",
-    "resultado_carga_tabla_reservas = carga_bbdd(df_tabla_reservas, \"reservas\", \"id_reserva\") \n",
-    "print(resultado_carga_tabla_reservas)"
+    "\n",
+    "insertar_registros(df_tabla_reservas, \"reservas\", \"id_reserva\", cols_reservas)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "conn_alchemy.close()"
+    "session.close()"
    ]
   }
  ],
