--- a/notebooks_final/inicial_final.ipynb
+++ b/notebooks_final/inicial_final.ipynb
@@ -102,13 +102,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [
@@ -134,7 +127,7 @@
     "**2. Asegurar la unicidad del correo electrónico por cliente**  \n",
     "  \n",
     "\n",
-    "    Como hemos comentado antes, la forma más eficiente de reasignar los id_cliente sería asociándolo al mail, que debería ser único"
+    "    La forma más eficiente de reasignar los id_cliente sería asociándolo al mail, que debería ser único"
    ]
   },
   {
@@ -144,6 +137,13 @@
    "outputs": [],
    "source": [
     "df['id_cliente'] = df.groupby('mail').ngroup() + 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SEPARAMOS LOS HOTELES PROPIOS Y DE LA COMPETENCIA EN DATAFRAMES DISTINTOS PARA TRANSFORMARLOS CADA UNO DE UNA MANERA"
    ]
   },
   {
