--- a/notebooks_final/carga_BBDD_final.ipynb
+++ b/notebooks_final/carga_BBDD_final.ipynb
@@ -52,18 +52,19 @@
     "        tabla_alchemy = table(tabla, column(id)) # Crea un objeto table y le pasamos las columnas a las que queremos acceder después \n",
     "        query_alchemy_existentes = select(tabla_alchemy.c[id]) # Creamos la consulta SELECT accediendo a la columna id que hemos definido antes\n",
     "        df_valores_existentes = pd.read_sql(query_alchemy_existentes, con=engine)   # Ejecutamos la consulta\n",
-    "\n",
-    "        # query_existentes = text(f\"SELECT :{id} FROM :{tabla}\") \n",
-    "        # df_valores_existentes = pd.read_sql(query_existentes, con=engine) \n",
     "            \n",
     "    except Exception as e:\n",
     "        print(f\"No se ha podido acceder a los registros de la BBDD:\\n {e}\")\n",
     "\n",
-    "    df_valores_nuevos = dataframe[dataframe[id].isin(df_valores_existentes[id]) == False]\n",
-    "    # Los valores nuevos será el resultado de los valores del dataframe que le pasamos que no esten en df_valores_existentes\n",
+    "    # df_valores_nuevos = dataframe[dataframe[id].isin(df_valores_existentes[id]) == False]\n",
+    "        # Los valores nuevos será el resultado de los valores del dataframe que le pasamos que no esten en df_valores_existentes\n",
+    "    df_valores_nuevos = dataframe[~dataframe[id].isin(df_valores_existentes[id])] # La forma correcta de negar la condició isin es usando --> ~ \n",
+    "    # ~ se puede escribir: \n",
+    "    # ASCII: (Alt + 126)\n",
+    "    # o usando (Alt Gr + 4) --> El 4 de los números de la parte superior, no del teclado numérico de la derecha\n",
     "\n",
     "    if df_valores_nuevos.empty:\n",
-    "        print(\"Todos los valores ya existían en la BBDD\")\n",
+    "        print(\"Todos los valores ya existían en la BBDD\") \n",
     "\n",
     "    else:\n",
     "\n",
