--- a/notebooks_final/carga_BBDD_final.ipynb
+++ b/notebooks_final/carga_BBDD_final.ipynb
@@ -87,6 +87,10 @@
     "                VALUES ({values})\n",
     "            \"\"\")\n",
     "\n",
+    "            # INSERT INTO hoteles (nombre_hotel, competencia, valoracion, id_ciudad)\n",
+    "            # VALUES (:nombre_hotel, :competencia, :valoracion, :id_ciudad)\n",
+    "\n",
+    "\n",
     "            session.execute(insert_query, data_to_insert)\n",
     "            session.commit()\n",
     "\n",
